vlib/v/checker/tests/struct_non_ptr_struct_field_nil_default_value_err.vv
struct Context {}

struct Game {
mut:
	gg        Context = unsafe { nil }
	something int
}

fn main() {
	_ := &Game{}
}
